<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_drawable"
    tools:context=".CreateNewClient">

    <EditText
        android:id="@+id/et_client_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/text_drawable"
        android:ems="10"
        android:hint="@string/str_name_GR"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/et_client_lastname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/text_drawable"
        android:ems="10"
        android:hint="@string/str_lastname_GR"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/et_client_name"
        app:layout_constraintStart_toStartOf="@+id/et_client_name"
        app:layout_constraintTop_toBottomOf="@+id/et_client_name" />

    <EditText
        android:id="@+id/et_client_adress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/text_drawable"
        android:ems="10"
        android:hint="@string/str_address_GR"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/et_client_lastname"
        app:layout_constraintStart_toStartOf="@+id/et_client_lastname"
        app:layout_constraintTop_toBottomOf="@+id/et_client_lastname" />

    <EditText
        android:id="@+id/et_client_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/text_drawable"
        android:ems="10"
        android:hint="@string/str_telephone_GR"
        android:inputType="phone"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/et_client_adress"
        app:layout_constraintStart_toStartOf="@+id/et_client_adress"
        app:layout_constraintTop_toBottomOf="@+id/et_client_adress" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/str_please_fill_out_clients_details_GR"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_client_registration_GR"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/str_get_incoming_phone_number_GR"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/et_client_phone"
        app:layout_constraintTop_toBottomOf="@+id/et_client_phone" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_drawable"
        android:text="@string/str_register_GR"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_client_phone"
        app:layout_constraintStart_toStartOf="@+id/et_client_phone" />
</androidx.constraintlayout.widget.ConstraintLayout>