<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_drawable"
    tools:context=".SignUp">

    <EditText
        android:id="@+id/et_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/text_drawable"
        android:ems="10"
        android:hint="@string/str_name_GR"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="16dp"
        android:textColorHint="#37474F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/et_user_lastname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/text_drawable"
        android:ems="10"
        android:hint="@string/str_lastname_GR"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="16dp"
        android:textColorHint="#37474F"
        app:layout_constraintEnd_toEndOf="@+id/et_user_name"
        app:layout_constraintStart_toStartOf="@+id/et_user_name"
        app:layout_constraintTop_toBottomOf="@+id/et_user_name" />

    <EditText
        android:id="@+id/et_user_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/text_drawable"
        android:ems="10"
        android:hint="@string/str_email"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="16dp"
        android:textColorHint="#37474F"
        app:layout_constraintEnd_toEndOf="@+id/et_user_lastname"
        app:layout_constraintStart_toStartOf="@+id/et_user_lastname"
        app:layout_constraintTop_toBottomOf="@+id/et_user_lastname" />

    <EditText
        android:id="@+id/et_user_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/text_drawable"
        android:ems="10"
        android:hint="@string/str_password_GR"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:password="true"
        android:textColorHint="#37474F"
        app:layout_constraintEnd_toEndOf="@+id/et_user_email"
        app:layout_constraintStart_toStartOf="@+id/et_user_email"
        app:layout_constraintTop_toBottomOf="@+id/et_user_email" />

    <EditText
        android:id="@+id/et_user_password_repeat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/text_drawable"
        android:ems="10"
        android:hint="@string/str_repeat_password_GR"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:password="true"
        android:textColorHint="#37474F"
        app:layout_constraintEnd_toEndOf="@+id/et_user_password"
        app:layout_constraintStart_toStartOf="@+id/et_user_password"
        app:layout_constraintTop_toBottomOf="@+id/et_user_password" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/str_please_fill_up_your_details"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/str_sign_up_GR"
        android:textAlignment="center"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register_new_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_drawable"
        android:padding="16dp"
        android:text="@string/str_sign_up_GR"
        android:textColor="#C5CDDA"
        app:layout_constraintEnd_toEndOf="@+id/et_user_password_repeat"
        app:layout_constraintStart_toStartOf="@+id/et_user_password_repeat"
        app:layout_constraintTop_toBottomOf="@+id/et_user_password_repeat"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="8dp"
        android:text="@string/str_by_pressing_register_you_accept"
        android:textColor="#C5CDDA"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/btn_register_new_user"
        app:layout_constraintTop_toBottomOf="@+id/btn_register_new_user" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="3dp"
        android:text="@string/str_terms_of_use"
        android:textColor="#E91E63"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/btn_register_new_user"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

</androidx.constraintlayout.widget.ConstraintLayout>